============================
Change log for gocept.jsform
============================

2.7.0 (unreleased)
==================

- Add some more translations.


2.6.2 (2015-11-17)
==================

- Unify node where form data is saved to.


2.6.1 (2015-11-16)
==================

- Fix initialization of sources if form data is provided directly instead of
  retrieving it via load url.

- Make sure that `after-load` always fires asynchonously.

2.6.0 (2015-11-12)
==================

- Add option to switch one field or the whole form to readonly mode.


2.5.1 (2015-11-11)
==================

- Use `bower-knockout-mapping` in bower package instead of serving mapping
  plugin directly. (only effects bower package of `gocept.jsform`)


2.5.0 (2015-11-06)
==================

- Add list widget which uses jsform to display edit form of list items.

- Remove version pin of Handlebars, since error related to Handlebars 4 is
  specific to the application that uses gocept.jsform.


2.4.0 (2015-09-08)
==================

- Pin version of Handlebars to 3.0.3, since switching to a new major version
  should be done on purpose, rather by chance.


2.3.0 (2015-07-31)
==================

- Display status messages 3 seconds instead of 1 second. This hopefully will
  fix test failures in Jenkins.

- Introduced, that a save call to a widget can manipulate the source values of
  another widget. This is usefull for dropdowns, where the list of available
  values is dependend from the selected value of another dropdown.


2.2.0 (2015-06-17)
==================

- Fix display of validation error messages.

- Make it possible to display custom HTTP error messages when `message` was
  provided in the JSON response.


2.1.0 (2015-04-09)
==================

- If ajax result is HTML instead of JSON data, display HTML (which is in most
  cases a 500 error or login page). (#11838)


2.0.0 (2015-03-26)
==================

- Nothing changed yet.


1.2.1a1+bower-1 (2015-02-03)