@@ -6,7 +6,10 @@
                    optionsText: 'title',
                    optionsCaption: '{{placeholder}}',
                    optionsAfterRender: function(option, item) {
-                      if (! item) return;
-                      option.value = item.token;
-                    }">
+                     if (!item && {{required}}) {
+                       option.disabled = true;
+                     } else if (item) {
+                       option.value = item.token;
+                     }
+                   }">
 </select>
